# f1tenth

./: .gitignore  .gitmodules  F1Tenth.json  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
docs/: installation.md  usage.md
maps/: new_extract_centerline.py
maps/map_2025-07-15_14-19-22/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-09-09_10-52-29/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-11_19-17-42/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-15_15-57-17/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-15_16-33-33/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-16_14-21-10/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-16_17-11-46/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
sim_mpc/250414_MPC_test/: setup_ocp.m  (+1 more)
src/process_monitor/: package.xml  setup.cfg  setup.py
src/process_monitor/config/: process_monitor.yaml
src/process_monitor/launch/: process_monitor.launch.py
src/process_monitor/process_monitor/: __init__.py  process_monitor_node.py
tools/: connect_xbox.sh  dummy_monitor  foxglove_bridge.service  home-jetson-remote_sim_mpc.mount  save_map.sh  save_map_cartographer.py
traj/: centerline_test_map.csv  centerline_v2_map_2025-09-09_10-52-29.csv  plot.py  track_data.csv
(+290 files in other folders)
