<?xml version="1.0"?>
<package format="3">
  <name>process_monitor</name>
  <version>0.1.0</version>
  <description>ROS 2 node that publishes Jetson process CPU and memory usage for Foxglove.</description>
  <maintainer email="jetson@example.com">Jetson User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>process_monitor_msgs</depend>
  <depend>rclpy</depend>
  <exec_depend>python3-psutil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
